src/main/java/com/example/cbumanage/global/error/InvalidMapperSetupException.java
package com.example.cbumanage.global.error;

public class InvalidMapperSetupException extends RuntimeException {

    public InvalidMapperSetupException(String message) {
        super(message);
    }
}
